--- a/html/menu.html
+++ b/html/menu.html
@@ -12,15 +12,15 @@
       <div class="user-info">
         <img
           alt="User profile picture"
-          src="..//img/usuario.jpeg"
+          src="..//img/usuarioCirculo.png"
           class="imagenUsuario"
         />
         <div>
-          <div id="TextoUsuario">Usuario :</div>
-          <img alt="Mazda logo" src="..//img/logo.jpeg" class="logo" />
+          <div id="TextoUsuario" >Usuario :</div>
+          <img alt="Mazda logo" src="..//img/nombre2.png" class="logo" />
         </div>
       </div>
-      <div class="date">
+      <div class="date" id="fecha">
         Tuesday 22
         <sup> nd </sup>
         October 2024
@@ -29,29 +29,29 @@
     <div class="content">
       
       <div class="news">
-        <img src="../img/menuLateral.jpeg" alt="menuLateral" />
+        <img src="../img/mensajes.png" alt="menuLateral" />
       </div>
       <div class="actions">
         <a href="resgistro.html" class="action" > 
-        <img src="..//img/nota.jpeg" alt="nota" />
+        <img src="..//img/prestamo.png" alt="nota" />
         </a>
         
-        <img src="..//img/sku.jpeg" alt="sku" class="action" />
-        <img src="..//img/inventario.jpeg" alt="inventario" class="action" />
+        <img src="..//img/sku.png" alt="sku" class="action" />
+        <img src="..//img/inventario.png" alt="inventario" class="action" />
         <img
-          src="..//img/devoluciones.jpeg"
+          src="..//img/devoluciones.png"
           alt="devoluciones"
           class="action"
         />
         <img
-          src="..//img/herramientas.jpeg"
+          src="..//img/herramientasBajo.png"
           alt="herramientas"
           class="action"
         />
-        <img src="..//img/busqueda.jpeg" alt="busqueda" class="action" />
-        <img src="..//img/codigo.jpeg" alt="codigo" class="action" />
+        <img src="..//img/busqueda.png" alt="busqueda" class="action" />
+        <img src="..//img/codigo.png" alt="codigo" class="action" />
       </div>
-      <img src="../img/mensajes.jpeg" alt="mensajes" class="correo">
+      <img src="../img/correo.png" alt="mensajes" class="correo">
       <img
         alt="Large logo in the background"
         height="400"
