--- a/html/resgistro.html
+++ b/html/resgistro.html
@@ -12,35 +12,35 @@
       <div class="user-info">
         <img
           alt="User profile picture"
-          src="..//img/usuario.jpeg"
+          src="..//img/usuarioCirculo.png"
           class="imagenUsuario"
         />
         <div>
           <div id="TextoUsuario">Usuario :</div>
-          <img alt="Mazda logo" src="..//img/logo.jpeg" class="logo" />
+          <img alt="Mazda logo" src="..//img/nombre2.png" class="logo" />
         </div>
       </div>
-      <div class="date">
+      <div class="date" id="fecha">
         Tuesday 22
         <sup> nd </sup>
         October 2024
       </div>
 
       <div class="icons">
-        <a href=""><img src="../img/eliminar.jpeg" alt="eliminar" /> </a>
-        <a href=""> <img src="../img/crear.jpeg" alt="crear" /></a>
+        <a href=""><img src="../img/eliminar.png" alt="eliminar" /></a>
+        <a href=""><img src="../img/ver.png" alt="crear" /></a>
 
-        <a href=""><img src="../img/editar.jpeg" alt="editar" /></a>
-        <a href=""><img src="../img/modificar.jpeg" alt="modificar" /></a>
+        <a href=""><img src="../img/editar.png" alt="editar" /></a>
+        <a href=""><img src="../img/regreso.png" alt="modificar" /></a>
       </div>
     </div>
     <div class="sidebar">
-      <a href="menu.html"> <img src="../img/nuevo.jpeg" alt="nuevo" /></a>
+      <a href="menu.html"><img src="../img/vale.png" alt="nuevo" /></a>
       <div class="search-box">
         <input placeholder="Search" type="text" />
       </div>
-      <a href=""> <img src="../img/guardar.jpeg" alt="guardar" /></a>
-      <a href=""> <img src="../img/imprimir.jpeg" alt="imprimir" /></a>
+      <a href=""> <img src="../img/guardar.png" alt="guardar" /></a>
+      <a href=""> <img src="../img/imprimir.png" alt="imprimir" /></a>
     </div>
     <div class="content">
       <div class="form">
@@ -90,7 +90,7 @@
               <th>Cantidad</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="registros">
             <tr>
               <td>Juan Luis </td>
               <td>165432</td>
